# violetta

./: Cargo.toml  README.md  rocket.yml  violetta.toml
.github/workflows/: ci.yml  test.yml
src/: main.rs  test.rs
