[package]
name = "violetta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["serde_json", "json"]

[dependencies.tokio]
version = "1.24.2"
features = ["full"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v5",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]